# heart-disease-risk-predictor

./: .coverage  .gitignore  COMPLETION_CHECKLIST.md  README.md  app.py  depth concepts of Project.txt  environment.yml  main.py  predict.py  pyproject.toml  requirements.txt  requirements_run.txt
.streamlit/: config.toml
data/: data_5000.csv  heart - Shortcut.lnk  heart_5000.csv
models/: balanced_report.md  balanced_report.txt  feature_names.txt  logistic_balanced.pkl  logistic_baseline.pkl  logistic_regression.pkl  mlp.pkl  mlp_balanced.pkl  random_forest.pkl  random_forest_optuna.pkl  scaler.pkl  scaler_balanced.pkl  svm_balanced.pkl  svm_rbf.pkl  xgb_balanced.pkl  xgb_quick.pkl  xgboost.pkl
notebooks/: exploration.ipynb
scripts/: train_and_eval.py
src/: balanced_train.py  evaluate.py  generate_synthetic.py  predict.py  preprocess.py  quick_train.py  run_svm.py  save_report.py  shap_explain.py  train.py
tests/: test_evaluate.py  test_preprocess.py
tools/: check_imports.py
