[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-risk-predictor"
version = "1.0.0"
description = "A machine learning project that predicts cardiovascular disease risk using 7 classification models"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Usman Khan, Ibrahim, Abdul Hannan", email = "student@example.com"}
]
keywords = ["machine-learning", "heart-disease", "classification", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "shap>=0.45.0",
    "streamlit>=1.34.0",
    "xgboost>=2.0.0",
    "optuna>=3.5.0",
    "imbalanced-learn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]
